--- a/src/components/sections/Certifications/Certifications.scss
+++ b/src/components/sections/Certifications/Certifications.scss
@@ -3,17 +3,43 @@
 .certifications_container {
    background: #060d0b;
    position: relative;
-   padding-block: 100px;
+   padding-bottom: 100px;
    width: 100%;
+   align-items: flex-start;
 
-   @media screen and (max-width: 768px) {
-      padding-block: 80px;
+   .title-wrapper {
+      p {
+         margin-bottom: 0px;
+      }
+   
+      p:nth-child(1) {
+         font-size: 12px;
+         margin-bottom: 12px;
+   
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+   
+      p:nth-child(2) {
+         font-size: 20px;
+         margin-bottom: 12px;
+   
+         @media all and (min-width: 400px) {
+            font-size: 24px;
+         }
+   
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
    }
+
    .certificate-container {
-      margin-top: 3.5rem;
+      margin-top: 40px;
 
       .certificate_card {
-         padding: 2rem;
+         padding: 24px;
          display: flex;
          justify-content: center;
          align-items: center;
@@ -33,6 +59,38 @@
                rgba(255, 255, 255, 0.5) -584.64%,
                rgba(255, 255, 255, 0) 100%
             );
+         height: 100%;
+         // min-height: 208px;
+
+         @media all and (min-width: 400px) {
+            padding: 32px;
+         }
+
+         .heading {
+            font-size: 16px;
+
+            @media all and (min-width: 400px) {
+               font-size: 18px;
+            }
+
+            @media all and (min-width: 768px) {
+               font-size: 20px;
+            }
+         }
+
+         .para {
+            font-size: 12px;
+            margin-bottom: 0px;
+
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
+
+            @media all and (min-width: 768px) {
+               font-size: 16px;
+            }
+         }
+
          .certificate_image {
             height: 5rem;
             max-width: 7rem;
@@ -64,33 +122,37 @@
             width: 80%;
          }
       }
+      
+      .owl-stage {
+         display: flex;
+      }
    }
 }
 
-.gap {
-   gap: 32px;
-   display: flex;
-}
+// .gap {
+//    gap: 32px;
+//    display: flex;
+// }
 
 @media screen and (max-width: 769px) {
-   .certifications_container
-      .certificate-container
-      .certificate_card
-      .certificate_name {
-      font-size: 22px;
-      padding-bottom: 16px;
-   }
-   .certifications_container .certificate-container .certificate_card {
-      min-height: 208px;
-   }
-   .certifications_container
-      .certificate-container
-      .certificate_card
-      .certificate_desc {
-      font-size: 16px;
-      padding: 0;
-   }
-   .certifications_container {
-      padding: 88px 0;
-   }
+   // .certifications_container
+   //    .certificate-container
+   //    .certificate_card
+   //    .certificate_name {
+   //    font-size: 22px;
+   //    padding-bottom: 16px;
+   // }
+   // .certifications_container .certificate-container .certificate_card {
+   //    min-height: 208px;
+   // }
+   // .certifications_container
+   //    .certificate-container
+   //    .certificate_card
+   //    .certificate_desc {
+   //    font-size: 16px;
+   //    padding: 0;
+   // }
+   // .certifications_container {
+   //    padding: 88px 0;
+   // }
 }
