--- a/src/components/sections/Process/Process.scss
+++ b/src/components/sections/Process/Process.scss
@@ -2,95 +2,91 @@
 
 .process_container {
    background: #0d0d0d;
-
-   padding-block: 100px;
    width: 100%;
-
-   @media screen and (max-width: 768px) {
-      padding-block: 80px;
-   }
    position: relative;
    z-index: 1;
    overflow: hidden;
+   padding: 40px 0px;
+
+   @media all and (min-width: 1200px) {
+      padding: 60px 0px;
+   }
+
+   .title-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+
+      @media all and (min-width: 1200px) {
+         margin-bottom: 40px;
+      }
+
+      p {
+         margin-bottom: 0px;
+      }
+   
+      p:nth-child(1) {
+         font-size: 12px;
+         margin-bottom: 12px;
+   
+         @media all and (min-width: 992px) {
+            font-size: 16px;
+         }
+      }
+   
+      p:nth-child(2) {
+         font-size: 20px;
+         margin-bottom: 12px;
+   
+         @media all and (min-width: 400px) {
+            font-size: 24px;
+         }
+   
+         @media all and (min-width: 992px) {
+            font-size: 32px;
+         }
+      }
+   }
+   
    .process-ellipse {
+      position: absolute;
       border-radius: 100%;
       opacity: 0.3;
       background: linear-gradient(135deg, #81ffef 0%, #f067b4 100%);
-      width: 880px;
-      height: 880px;
-      position: absolute;
-      left: calc(50% - 440px);
-      bottom: 0;
-      filter: blur(250px);
-   }
-
-   .process_heading {
-      //display: flex;
-      color: #4f7d6e;
-      text-align: center;
-      font-family: Manrope;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 150%; /* 24px */
-      letter-spacing: 5px;
-      text-transform: uppercase;
-   }
-   .work {
-      color: #fdfdff;
-      text-align: center;
-      font-family: Manrope;
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 120%; /* 38.4px */
-      padding: 10px 0 60px 0;
-   }
-   .video_container {
-      width: 1084.684px;
-      height: 685.701px;
-      max-width: 100%;
-      border-radius: 20px;
-      .video {
-         /* display: flex; */
-         width: 100%;
-         /* height: 685.701px; */
-         border-radius: 21.694px;
-         align-items: center;
-         border-radius: 20px;
-         height: 100%;
-         object-fit: cover;
-      }
-   }
-}
-
-@media (max-width: 991px) {
-   .process_container {
-      padding: 88px 0 70px;
-   }
-   .process_container .video_container {
       height: 100%;
       width: 100%;
+      bottom: 0;
+      filter: blur(100px);
+      
+      @media all and (min-width: 150px) {
+         filter: blur(150px);
+         opacity: 0.15;
+      }
+      
+      @media all and (min-width: 1200px) {
+         height: 120%;
+         width: 120%;
+         right: -125px;
+         top: -80px;
+         filter: blur(250px);
+      }
    }
-   .process_container .work {
-      padding-bottom: 50px;
-   }
-}
 
-@media (max-width: 767px) {
-   .process_container .video_container .video {
-      border-radius: 7px;
-   }
-   .process_container .process_heading {
-      font-size: 12px;
-   }
-   .process_container .work {
-      font-size: 24px;
-   }
-   .process_container .process-ellipse {
-      height: 384px;
-      width: 384px;
-      left: calc(50% - 192px);
-      filter: blur(94.48123168945312px);
+   .video_container {
+      height: 100%;
+      width: 100%;
+
+      .video {
+         width: 100%;
+         align-items: center;
+         height: 100%;
+         object-fit: cover;
+         border-radius: 7px;
+
+         @media all and (min-width: 992px) {
+            border-radius: 21.694px;
+         }
+      }
    }
 }
