--- a/src/components/sections/Partners/Partners.scss
+++ b/src/components/sections/Partners/Partners.scss
@@ -2,40 +2,53 @@
 
 .partners_container {
    background: #09100e;
-
-   padding-block: 100px;
    width: 100%;
+   padding-block: 80px;
 
-   @media screen and (max-width: 768px) {
-      padding-block: 80px;
+   @media all and (min-width: 768px) {
+      padding-block: 100px;
    }
+
    .partner_content_container {
-      @media screen and (max-width: 769px) {
-         padding: 0;
-         margin: 0 auto;
-      }
-      .heading {
+      padding: 0px 2rem;
+      margin: 0 auto;
+      max-width: 1200px !important;
+      
+
+      .title-wrapper {
          display: flex;
-         color: #4f7d6e;
-         font-family: Manrope;
-         font-size: 16px;
-         font-style: normal;
-         font-weight: 600;
-         line-height: 150%; /* 24px */
-         letter-spacing: 5px;
-         text-transform: uppercase;
-         justify-content: center;
-      }
-      .sub_title {
-         color: #fdfdff;
-         text-align: center;
-         font-family: Manrope;
-         font-size: 32px;
-         font-style: normal;
-         font-weight: 700;
-         line-height: 120%; /* 38.4px */
-         padding-top: 10px;
-         padding-bottom: 56px;
+         flex-direction: column;
+         align-items: center;
+         margin-bottom: 20px;
+
+         @media all and (min-width: 768px) {
+            margin-bottom: 40px;
+         }
+         p {
+            margin-bottom: 0px;
+         }
+   
+         p:nth-child(1) {
+            font-size: 12px;
+            margin-bottom: 12px;
+   
+            @media all and (min-width: 992px) {
+               font-size: 16px;
+            }
+         }
+   
+         p:nth-child(2) {
+            font-size: 20px;
+            margin-bottom: 12px;
+   
+            @media all and (min-width: 400px) {
+               font-size: 24px;
+            }
+   
+            @media all and (min-width: 992px) {
+               font-size: 32px;
+            }
+         }
       }
    }
 }
@@ -43,36 +56,44 @@
 .partner-card {
    display: flex;
    flex-direction: column;
-   // float: left;
-   display: flex;
-   // height: 170px;
-   // width: 299.667px;
-   padding: 32px 56px;
-   gap: 32px;
-   margin: 0 10px;
+   justify-content: center;
    align-self: stretch;
-   border-radius: 16px;
    background: linear-gradient(153deg, #111815 0%, #0f1311 98.89%);
    border: 1px solid #0f1a1654;
-   justify-content: center;
+   border-radius: 24px;
+   padding: 20px;
+   gap: 25px;
+   text-align: center;
+   margin: 0 2px;
+
+   @media all and (min-width: 768px) {
+      padding: 28px;
+      gap: 20px;
+      margin: 0 10px;
+      border-radius: 16px;
+   }
+
+   @media all and (min-width: 992px) {
+      // min-width: 380px;
+   }
 
    .partner_logo {
-      width: 96px;
-      height: 42px;
+      width: auto;
+      height: 32px;
+
+      @media all and (min-width: 400px) {
+         height: 40px;
+      }
    }
-   .blog_heading {
-      align-self: stretch;
-      color: #f2f2f2;
-      font-family: Manrope;
-      font-size: 18px;
-      font-style: normal;
-      font-weight: 300;
-      line-height: normal;
-      line-height: 150%; /* 27px */
-      opacity: 0.6;
-   }
+   
    .para{
       text-align: center;
+      font-size: 12px;
+      margin-bottom: 10px;
+
+      @media all and (min-width: 400px) {
+         font-size: 14px;
+      }
    }
    
 }
@@ -89,35 +110,36 @@
       height: 100%;
       z-index: 2;
       background: rgb(9,16,14);
-      background: -moz-linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 6%, rgba(9,16,14,0) 94%, rgba(9,16,14,1) 98%);
+      background: -moz-linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 4%, rgba(9,16,14,0) 96%, rgba(9,16,14,1) 98%);
       background: -webkit-linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 6%, rgba(9,16,14,0) 94%, rgba(9,16,14,1) 98%);
       background: linear-gradient(90deg, rgba(9,16,14,1) 2%, rgba(9,16,14,0) 6%, rgba(9,16,14,0) 94%, rgba(9,16,14,1) 98%);
+      display: none;
    
-      @media screen and (max-width: 450px) {
-         display: none;
+      @media screen and (min-width: 450px) {
+         display: block;
       } 
    }
 }
 
 @media screen and (max-width: 767px) {
-   .partner-card {
-      padding: 20px 10px;
-      gap: 25px;
-      text-align: center;
-      margin: 0 2px;
-      border-radius: 24px;
-   }
-   .partner-card .blog_heading {
-      font-size: 16px;
-   }
-   .partners_container .partner_content_container .heading {
-      font-size: 12px;
-   }
-   .partners_container .partner_content_container .sub_title {
-      font-size: 24px;
-   }
+   // .partner-card {
+   //    padding: 20px 10px;
+   //    gap: 25px;
+   //    text-align: center;
+   //    margin: 0 2px;
+   //    border-radius: 24px;
+   // }
+   // .partner-card .blog_heading {
+   //    font-size: 16px;
+   // }
+   // .partners_container .partner_content_container .heading {
+   //    font-size: 12px;
+   // }
+   // .partners_container .partner_content_container .sub_title {
+   //    font-size: 24px;
+   // }
    .partners_container {
-      padding-inline: 2rem !important;
+      // padding-inline: 2rem !important;
       // width: calc(100% - 4rem);
    }
 }
