--- a/src/components/sections/Interested/Interested.scss
+++ b/src/components/sections/Interested/Interested.scss
@@ -1,36 +1,46 @@
 .interested_container {
    display: flex;
-   // background-image: url('../../../../media/pattern 2.png'), url('../../../../media/pattern1.png');
-   // background-position: left, right;
-   // background-repeat: no-repeat;background-position: contain;
-   background-color: #09100E;
+   background-color: #01121C;
    position: relative;
    z-index: 1;
-   @media screen and (max-width: 769px) {
-      padding: 0;
-      margin: 0 auto;
-   }
+   padding: 0;
+   margin: 0 auto;
+   
    .demo_content_container {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       gap: 4rem;
       width: 100%;
-      padding-block: 120px;
-      @media screen and (max-width: 768px) {
-         flex-direction: column;
-         gap: 1rem;
-         padding-block: 60px;
+      flex-direction: column;
+      gap: 1rem;
+      padding-block: 60px;
+
+      @media all and (min-width: 768px) {
+         flex-direction: row;
+         align-items: center;
+         padding: 100px 50px;
       }
+      // }
       .left_content {
          .heading {
+            font-size: 24px;
             @media screen and (min-width: 768px) {
-               font-size: 2.5rem;
+               font-size: 30px;
             }
          }
          .para {
+            font-size: 12px;
             font-weight: 300;
             max-width: 600px;
+
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
+
+            @media all and (min-width: 992px) {
+               font-size: 16px;
+            }
          }
       }
       .right_content {
@@ -38,12 +48,11 @@
             display: inline-block !important;
             white-space: nowrap;
             padding: 0.8rem 2rem !important;
-            font-size: 14px !important;
-         }
+            font-size: 12px;
 
-         @media screen and (max-width: 768px) {
-            margin-left: 0;
-            margin-right: auto;
+            @media all and (min-width: 400px) {
+               font-size: 14px;
+            }
          }
       }
    }
