--- a/src/components/pages/banner.scss
+++ b/src/components/pages/banner.scss
@@ -2,70 +2,93 @@
 
 .banner-container {
   width: 100%;
-  padding: 97px 0;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // object-fit: contain;
-  // box-sizing: border-box;
   position: relative;
   overflow-x: clip;
-
+  padding-top: 72px;
 
   .section_1 {
-    
-
-    @media (max-width: 768px) {
-      margin-left: 0px;
-    }
-
     .deploy_title {
       color: #f2f2f2;
-      font-family: Manrope;
-      font-size: 28px;
       font-weight: 400;
       line-height: 120%;
-      margin-bottom: 16px;
+      margin-bottom: 8px;
+      font-size: 16px;
 
-      @media (max-width: 768px) {
-        margin-top: 0px;
-        margin-bottom: 12px;
+      @media all and (min-width: 400px) {
         font-size: 18px;
       }
+
+      @media all and (min-width: 992px) {
+        font-size: 20px;
+      }
+
+      @media all and (min-width: 1200px) {
+        font-size: 22px;
+      }
     }
+
     .heading {
-      max-width: 697.217px;
-      font-family: Manrope;
-      font-size: 60px;
       font-weight: 200;
+      font-size: 32px;
       background: linear-gradient(135deg, #FFCF71 0%, #2376DD 100%);
       background-clip: text;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      margin-bottom: 40px;
+      margin-bottom: 18px;
+
+      @media all and (min-width: 400px) {
+        font-size: 40px;
+      }
+
+      @media all and (min-width: 768px) {
+        max-width: 500px;
+      }
+
+      @media all and (min-width: 992px) {
+        font-size: 48px;
+        max-width: 600px;
+      }
+
+      @media all and (min-width: 1200px) {
+        font-size: 60px;
+        max-width: 700px;
+      }
     }
+
     .feature {
       max-width: 469.865px;
       color: #f1f1f1;
-      font-family: Manrope;
-      font-size: 18px;
       font-weight: 200;
-      // line-height: 120%;
       letter-spacing: 1px;
       margin-bottom: 32px;
+      font-size: 12px;
+      font-weight: 200;
+
+      @media all and (min-width: 400px) {
+        font-size: 14px;
+      }
+
+      @media all and (min-width: 992px) {
+        font-size: 16px;
+      }
+
+      @media all and (min-width: 1200px) {
+        font-size: 18px;
+      }
     }
+
     .btn_container {
       .btn_contact_sales {
         border-radius: 4px;
         border: 1px solid #e5be20;
         display: flex;
-        padding: 16px 32px;
+        padding: 12px 24px;
         align-items: center;
         font-family: Manrope;
         font-size: 14px;
         font-weight: 600;
         line-height: 20px;
-        letter-spacing: 0.14px;
+        letter-spacing: 1px;
         color: #e5be20;
         background: none;
         cursor: pointer;
@@ -75,115 +98,132 @@
 
   .video_container {
     position: absolute;
-    top: -280px;
-    right: 0px;
-    max-width: 779.951px;
-    max-height: 779.951px;
     transform: rotate(-45deg);
     mix-blend-mode: screen;
+    top: -100px;
+    right: -80px;
+
+    @media all and (min-width: 768px) {
+      top: -150px;
+      right: -100px;
+    }
+
+    @media all and (min-width: 992px) {
+      top: -200px;
+      right: -150px;
+    }
+
+    @media all and (min-width: 1440px) {
+      top: -280px;
+      right: -180px;
+    }
+
+    @media all and (min-width: 1920px) {
+      top: -320px;
+      right: -100px;
+    }
+
     video {
-      max-width: 779.951px;
-      max-height: 779.951px;
+      width: 250px;
+      height: 250px;
+
+      @media all and (min-width: 400px) {
+        width: 300px;
+        height: 300px;
+      }
+
+      @media all and (min-width: 768px) {
+        width: 400px;
+        height: 400px;
+      }
+
+      @media all and (min-width: 992px) {
+        width: 500px;
+        height: 500px;
+      }
+
+      @media all and (min-width: 1200px) {
+        width: 600px;
+        height: 600px;
+      }
+
+      @media all and (min-width: 1440px) {
+        width: 700px;
+        height: 700px;
+      }
+
+      @media all and (min-width: 1920px) {
+        width: 800px;
+        height: 800px;
+      }
     }
   }
 
-
   .brands {
     display: flex;
-    margin-top: 100px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* max-width: 1200px; */
-    padding: 24px 24px 32px 24px;
     gap: 24px;
-    border-radius: 12px;z-index: 1;overflow: hidden;
-    // border: 1px solid #04446c;
-    border:  1px solid #313e464a;
+    border-radius: 12px;
+    z-index: 1;
+    overflow: hidden;
+    border: 1px solid #313e464a;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.1) -111.16%, rgba(1, 16, 24, 0.1) 100%);
     box-shadow: 0px 28px 132px 0px rgba(0, 0, 0, 0.25);
-    // -webkit-backdrop-filter: blur(16px);
-    // backdrop-filter: blur(16px);
-    /* margin-left: 8%; */
-    // margin-bottom: 51px;
-    /* box-sizing: border-box;*/
+    -webkit-backdrop-filter: blur(16px);
+    backdrop-filter: blur(16px);
+    margin-top: 40px;
+    padding: 24px 24px;
 
-    // @media (max-width: 768px) {
-    //   width: 100%;
-    //   margin-left: 0px;
-    //   max-width: 380px;
-    //   padding: 32px 24px;
-    //   gap: 32px;
-    //   margin-bottom: 0px;
-    // }
     .brand-dot-img {
       background: url('../../media/noise.webp');
       width: 100%;
       height: 100%;
       left: 0;
-      z-index: -1;    bottom: 0;
+      bottom: 0;
+      z-index: -1;
       opacity: 0.1;
-      filter: opacity(0.5);    background-repeat: repeat;
+      filter: opacity(0.5);
+      background-repeat: repeat;
       background-size: contain;
     }
+
     .trust {
       opacity: 0.4;
       color: #fff;
       text-align: center;
-      font-family: Manrope;
-      font-size: 14px;
       font-style: normal;
       font-weight: 600;
       line-height: 150%;
       letter-spacing: 2px;
+      font-size: 8px;
 
-      @media (max-width: 768px) {
+      @media all and (min-width: 400px) {
+        font-size: 10px;
+      }
+
+      @media all and (min-width: 992px) {
         font-size: 12px;
       }
     }
 
     .brands_images {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 72px;
-      @media (max-width: 768px) {
-        flex-wrap: wrap;
-        max-width: 348px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+
+      @media all and (min-width: 576px) {
+        gap: 50px;
+      }
+
+      @media all and (min-width: 768px) {
+        display: flex;
+      }
+
+      img {
+        justify-self: center;
       }
     }
   }
-}
-
-
-
-
-@media (max-width: 991px) {
-  .banner-container{padding: 50px 0px 0;}
-  .banner-container .section_1 .deploy_title{font-size: 18px;margin-bottom: 0px;}
-  .banner-container .section_1 .heading{font-size: 48px;margin-bottom: 22px;max-width: 100%;line-height: 110%;}
-  .banner-container .brands{margin-top: 70px;}
-  .banner-container .video_container video {
-    width: 650px;
-    height: 650px;
-  }
-}
-
-
-@media (max-width: 767px) {
-  .banner-container .video_container video {
-    width: auto;
-    height: auto;max-width: 100%;
-  }
-  .banner-container .video_container{
-    height: 380px;
-    width: 380px;
-    max-width: 100%;right: -140px;top: -140px;
-    max-height: 100%;
-  }
-  .banner-container .section_1 .feature{font-size: 12px;font-weight: 200;}
-  .banner-container .section_1 .btn_container .btn_contact_sales{padding: 12px 24px;}
-  .banner-container .brands{align-items: normal;    max-width: 315px;}
-  .banner-container .brands .brands_images{gap: 32px;flex-wrap: wrap;}
-  
 }
