Fix misc link styling

--- a/src/components/pages/AboutUs/WhyHow/About_WhyHow.scss
+++ b/src/components/pages/AboutUs/WhyHow/About_WhyHow.scss
@@ -114,6 +114,7 @@
              }
              .link {
                display: flex;
+               cursor: pointer;
                 * {
                    color: #e5be20;
                 }
