--- a/src/components/pages/Career/WhyHow/career_WhyHow.scss
+++ b/src/components/pages/Career/WhyHow/career_WhyHow.scss
@@ -103,7 +103,8 @@
 
             .link {
                display: flex;
-
+               cursor: pointer;
+               
                * {
                   color: #e5be20;
                }
