--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -3,12 +3,11 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   font-size: 1.2rem;
+   font-size: 14px;
    position: sticky;
    top: 0;
    z-index: 999;
    max-width: auto;
-   // padding: 0px 120px;
    backdrop-filter: blur(10px);
 }
 
@@ -21,18 +20,27 @@
    display: flex;
    align-items: center;
 }
+
 .btn--primary {
    background-color: #e5be20 !important;
+   display: none;
+
+   @media all and (min-width: 992px) {
+      display: block;
+   }
 }
+
 .nav-menu {
-   display: grid;
-   grid-template-columns: repeat(5, auto);
-   //grid-gap: 62px;
-   list-style: none;
-   text-align: center;
-   // width: 60vw;
-   margin-right: auto;
-   justify-content: flex-start;
+   display: none;
+
+   @media all and (min-width: 992px) {
+      display: grid;
+      grid-template-columns: repeat(5, auto);
+      list-style: none;
+      text-align: center;
+      margin-right: auto;
+      justify-content: flex-start;
+   }
 }
 
 .nav-item {
@@ -53,65 +61,15 @@
    gap: 2px;
    letter-spacing: 0.5px;
    cursor: pointer;
-   &.active {
+
+   &:hover {
       color: #e5be20 !important;
-   }
-}
 
-.nav-links:hover {
-   color: #e5be20;
-}
-
-.menu-container a:hover {
-   background-color: #ddd;
-}
-
-.menu:hover .nav-links i {
-   transform: rotate(180deg);
-   padding-top: 0;
-}
-
-.menu:hover .menu-container {
-   display: block;
-}
-.menu-container .menu-row {
-   display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
-   gap: 1rem;
-}
-.menu-container.solutions {
-   left: calc(50% - 247px);
-}
-
-.menu-container.solutions .menu-row {
-   grid-template-columns: 1fr 2fr;
-
-   .menu-sub-row {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 1rem;
-
-      .menu-content {
-         display: flex;
-         flex-direction: column;
-         gap: 1rem;
-
-         img {
-            width: 3.5rem;
-            aspect-ratio: 1 / 1;
-         }
-
-         .heading {
-            padding: 0;
-            margin: 0;
-            font-weight: normal;
-         }
+      i {
+         transform: rotate(180deg);
+         padding-top: 0;
       }
    }
-}
-
-.menu-icon {
-   display: none;
 }
 
 .navbar-logo-image {
@@ -130,224 +88,270 @@
    background-color: inherit;
    font-family: "Manrope";
    margin: 0 30px 0 0;
-}
 
-//Products Menu
-.menu-container {
-   left: calc(50% - 100px);
-   top: 46px;
-   display: none;
-   position: absolute;
-   width: 900px;
-   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-   z-index: 1;
-   border-radius: 16px;
-   border: 1px solid #2e3a43;
-   background: linear-gradient(
-         0deg,
-         rgba(18, 33, 43, 0.95) 0%,
-         rgba(18, 33, 43, 0.95) 100%
-      ),
-      radial-gradient(
-         185.16% 185.16% at 50% 0%,
-         rgba(0, 31, 41, 0.71) 0%,
-         rgba(2, 32, 50, 0.95) 100%
-      );
-   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1),
-      0px 27px 59px 0px rgba(0, 0, 0, 0.1),
-      0px 108px 108px 0px rgba(0, 0, 0, 0.09),
-      0px 243px 146px 0px rgba(0, 0, 0, 0.05),
-      0px 432px 173px 0px rgba(0, 0, 0, 0.01),
-      1px 676px 189px 0px rgba(0, 0, 0, 0);
-   backdrop-filter: blur(10px);
-   padding: 24px;
-   .menu-column {
-      // float: left;
-      // display: flex;
-      // width: auto;
-      // height:535px;
-      // flex-direction: column;
-      // align-items: flex-start;
-      // flex-shrink: 0;
-      // align-self: stretch;
-      // border-radius: 10px;
-      .menu-content {
-         position: relative;
-         min-height: 230px;
-         display: flex;
-         padding: 24px;
-         flex-direction: column;
-         align-items: flex-start;
-         /* text-align: left; */
-         gap: 16px;
-         flex: 1 0;
-         text-align: left;
-         border-radius: 10px;
-         border: 1px solid rgba(255, 255, 255, 0.05);
-         padding: 20px;
-         /* margin: 5px; */
-         font-family: Manrope;
-         font-size: 24px;
-         font-style: normal;
-         font-weight: 400;
-         line-height: 130%;
-         cursor: pointer;
+   &:hover {
+      .menu-container,
+      .menu-container.solutions {
+         display: block;
+      }
+   }
 
-         img {
-            width: 3.5rem;
-            aspect-ratio: 1 / 1;
-         }
-         .heading {
-            font-weight: normal;
-         }
+   .menu-container {
+      // left: calc(50% - 15vw);
+      left: -5vw;
+      margin: 0 auto;
+      top: 46px;
+      display: none;
+      position: absolute;
+      max-width: 900px;
+      width: 70vw;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+      border-radius: 16px;
+      border: 1px solid #2e3a43;
+      background: linear-gradient(0deg,
+            rgba(18, 33, 43, 0.95) 0%,
+            rgba(18, 33, 43, 0.95) 100%),
+         radial-gradient(185.16% 185.16% at 50% 0%,
+            rgba(0, 31, 41, 0.71) 0%,
+            rgba(2, 32, 50, 0.95) 100%);
+      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1),
+         0px 27px 59px 0px rgba(0, 0, 0, 0.1),
+         0px 108px 108px 0px rgba(0, 0, 0, 0.09),
+         0px 243px 146px 0px rgba(0, 0, 0, 0.05),
+         0px 432px 173px 0px rgba(0, 0, 0, 0.01),
+         1px 676px 189px 0px rgba(0, 0, 0, 0);
+      backdrop-filter: blur(10px);
+      padding: 24px;
 
-         &.active {
-            color: #e5be20 !important;
-         }
-
-         .menu-content-link {
+      .menu-column {
+         .menu-content {
+            position: relative;
+            min-height: 230px;
             display: flex;
+            padding: 24px;
             flex-direction: column;
             align-items: flex-start;
+            /* text-align: left; */
             gap: 16px;
+            flex: 1 0;
+            text-align: left;
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            padding: 20px;
+            /* margin: 5px; */
+            font-family: Manrope;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 130%;
+            cursor: pointer;
+
+            img {
+               width: 3.5rem;
+               aspect-ratio: 1 / 1;
+            }
+
+            .heading {
+               font-weight: normal;
+            }
+
+            &.active {
+               color: #e5be20 !important;
+            }
+
+            .menu-content-link {
+               display: flex;
+               flex-direction: column;
+               align-items: flex-start;
+               gap: 16px;
+
+               .heading {
+                  font-size: 18px;
+
+                  @media all and (min-width: 1200px) {
+                     font-size: 20px;
+                  }
+               }
+            }
+
+            .menu-content-arrow {
+               position: absolute;
+               right: 24px;
+               bottom: 24px;
+               width: 14px !important;
+               display: none;
+            }
+
+            &:hover {
+               background: rgba(255, 255, 255, 0.03);
+   
+               .menu-content-arrow {
+                  display: block
+               }
+            }
          }
 
-         .menu-content-arrow {
-            position: absolute;
-            right: 24px;
-            bottom: 24px;
-            width: 14px !important;
-            display: none;
+         a {
+            color: #f2f2f2 !important;
+         }
+
+         .menu-content:hover {
+            background: rgba(255, 255, 255, 0.03) !important;
          }
       }
-      .menu-content:hover {
-         background: rgba(255, 255, 255, 0.03);
-         .menu-content-arrow {
-            display: block
+
+      .menu-column2 {
+         // display: flex;
+         /* width: 262px; */
+         /* height: 487px; */
+         padding: 20px;
+         flex-direction: column;
+         align-items: flex-start;
+         gap: 20px;
+         flex-shrink: 0;
+         align-self: stretch;
+         border-radius: 10px;
+         background: rgba(1, 17, 24, 0.8);
+         -webkit-backdrop-filter: blur(6px);
+         backdrop-filter: blur(6px);
+
+         /* margin: 5px; */
+         .title {
+            text-align: left;
+            padding: 12px;
+            align-items: center;
+            gap: 8px;
+            align-self: stretch;
+            color: #e4deae;
+            font-family: Manrope;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 150%;
+            /* 27px */
+            letter-spacing: 1px;
+            margin-top: 0;
+            text-transform: capitalize;
+         }
+
+         .subtitle {
+            /* display: flex; */
+            padding: 8px 12px;
+            align-items: center;
+            gap: 8px;
+            text-align: left;
+            /* align-self: stretch; */
+            color: #c8c8c8;
+            font-family: Manrope;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 130%;
+            letter-spacing: 0.5px;
+            margin: 3px 0;
+            cursor: pointer;
+         }
+
+         .subtitle1 {
+            /* display: flex; */
+            padding: 8px 12px;
+            align-items: center;
+            gap: 8px;
+            text-align: left;
+            /* align-self: stretch; */
+            color: #c49a2d;
+            font-family: Manrope;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 130%;
+            letter-spacing: 0.5px;
+            margin: 3px 0;
+            cursor: pointer;
+            background: rgba(255, 255, 255, 0.03);
+         }
+
+         .subtitle:hover {
+            color: #c49a2d;
+            background: rgba(255, 255, 255, 0.03);
+         }
+
+         .seperator {
+            height: 1.5px;
+            margin: 20px 0;
+            align-self: stretch;
+            border-radius: 16px;
+            background: rgba(2, 36, 57, 0.5);
          }
       }
-      a{
-         color: #f2f2f2 !important;
+
+      .menu-row {
+         display: grid;
+         grid-template-columns: 1fr 1fr 1fr;
+         gap: 1rem;
       }
-      .menu-content:hover {
-         background: rgba(255, 255, 255, 0.03) !important;
+
+      a {
+         color: black;
+         text-decoration: none;
+         display: block;
+         text-align: left;
+
+         &:hover {
+            background-color: #ddd;
+         }
       }
    }
-   .menu-column2 {
-      // display: flex;
-      /* width: 262px; */
-      /* height: 487px; */
-      padding: 20px;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 20px;
-      flex-shrink: 0;
-      align-self: stretch;
-      border-radius: 10px;
-      background: rgba(1, 17, 24, 0.8);
-      -webkit-backdrop-filter: blur(6px);
-      backdrop-filter: blur(6px);
-      /* margin: 5px; */
-      .title {
-         text-align: left;
-         padding: 12px;
-         align-items: center;
-         gap: 8px;
-         align-self: stretch;
-         color: #e4deae;
-         font-family: Manrope;
-         font-size: 18px;
-         font-style: normal;
-         font-weight: 600;
-         line-height: 150%; /* 27px */
-         letter-spacing: 1px;
-         margin-top: 0;
-         text-transform: capitalize;
-      }
-      .subtitle {
-         /* display: flex; */
-         padding: 8px 12px;
-         align-items: center;
-         gap: 8px;
-         text-align: left;
-         /* align-self: stretch; */
-         color: #c8c8c8;
-         font-family: Manrope;
-         font-size: 14px;
-         font-style: normal;
-         font-weight: 400;
-         line-height: 130%;
-         letter-spacing: 0.5px;
-         margin: 3px 0;
-         cursor: pointer;
-      }
-      .subtitle1 {
-         /* display: flex; */
-         padding: 8px 12px;
-         align-items: center;
-         gap: 8px;
-         text-align: left;
-         /* align-self: stretch; */
-         color: #c49a2d;
-         font-family: Manrope;
-         font-size: 14px;
-         font-style: normal;
-         font-weight: 400;
-         line-height: 130%;
-         letter-spacing: 0.5px;
-         margin: 3px 0;
-         cursor: pointer;
-         background: rgba(255, 255, 255, 0.03);
-      }
-      .subtitle:hover {
-         color: #c49a2d;
-         background: rgba(255, 255, 255, 0.03);
-      }
-      .seperator {
-         height: 1.5px;
-         margin: 20px 0;
-         align-self: stretch;
-         border-radius: 16px;
-         background: rgba(2, 36, 57, 0.5);
+
+   .menu-container.solutions {
+      // left: calc(50% - 247px);
+      display: none;
+      left: -5vw;
+      .menu-row {
+         grid-template-columns: 1fr 2fr;
+   
+         .menu-sub-row {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1rem;
+   
+            .menu-content {
+               display: flex;
+               flex-direction: column;
+               gap: 1rem;
+   
+               .menu-content-link {
+                  img {
+                     width: 3.5rem;
+                     aspect-ratio: 1 / 1;
+                  }
+   
+                  .heading {
+                     padding: 0;
+                     margin: 0;
+                     font-weight: normal;
+                     font-size: 18px;
+   
+                     @media all and (min-size: 1200px) {
+                        font-size: 20px;
+                     }
+                  }
+               }
+            }
+         }
       }
    }
 }
 
-.menu-container a {
-   color: black;
-   text-decoration: none;
-   display: block;
-   text-align: left;
-}
 
-@media screen and (min-width: 992px) {
-   .mobile-menu {
+.mobile-menu {
+   display: grid;
+   place-content: center;
+
+   @media all and (min-width: 992px) {
       display: none;
    }
-}
-@media screen and (max-width: 991px) {
-   .mobile-menu {
-      display: grid;
-      place-content: center;
-   }
-   .nav-menu,
-   .navbar .btn--primary {
-      display: none !important;
-   }
-   .mobile-menu-container .btn--primary {
-      display: block !important;
-      margin: 0 auto;
-      width: calc(100% - 2rem);
-   }
-   .mobile-menu-container a {
-      padding-inline: 1rem;
-      margin-top: 1rem;
-   }
-   .mobile-menu-container a {
-      text-decoration: none;
-   }
-}
-@media screen and (max-width: 767px) {
 }
 
 a {
