--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -125,6 +125,9 @@
       padding: 24px;
 
       .menu-column {
+         display: flex;
+         flex-direction: column;
+         gap: 20px;
          .menu-content {
             position: relative;
             min-height: 230px;
@@ -205,6 +208,7 @@
          // display: flex;
          /* width: 262px; */
          /* height: 487px; */
+         height: 100%;
          padding: 20px;
          flex-direction: column;
          align-items: flex-start;
@@ -244,13 +248,17 @@
             /* align-self: stretch; */
             color: #c8c8c8;
             font-family: Manrope;
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 400;
             line-height: 130%;
             letter-spacing: 0.5px;
             margin: 3px 0;
             cursor: pointer;
+
+            @media all and (min-width: 1200px) {
+               font-size: 14px;
+            }
          }
 
          .subtitle1 {
@@ -262,7 +270,7 @@
             /* align-self: stretch; */
             color: #c49a2d;
             font-family: Manrope;
-            font-size: 14px;
+            font-size: 12px;
             font-style: normal;
             font-weight: 400;
             line-height: 130%;
@@ -270,6 +278,9 @@
             margin: 3px 0;
             cursor: pointer;
             background: rgba(255, 255, 255, 0.03);
+            @media all and (min-width: 1200px) {
+               font-size: 14px;
+            }
          }
 
          .subtitle:hover {
@@ -306,7 +317,7 @@
 
    .menu-container.solutions {
       // left: calc(50% - 247px);
-      display: none;
+      // display: none;
       left: -5vw;
       .menu-row {
          grid-template-columns: 1fr 2fr;
@@ -336,6 +347,14 @@
                      @media all and (min-size: 1200px) {
                         font-size: 20px;
                      }
+                  }
+               }
+
+               .heading {
+                  font-size: 18px;
+   
+                  @media all and (min-size: 1200px) {
+                     font-size: 20px;
                   }
                }
             }
